Adjust cache in collection creator

--- a/web/app/views/components/collection/_similar.html.erb
+++ b/web/app/views/components/collection/_similar.html.erb
@@ -8,7 +8,7 @@
   if similar_to
     event              = events.detect { |event| event.id == similar_to.to_i } || Event.find(similar_to)
     similar_events_ids = event.similar_data[0...similar_to_show]
-    similar_events     = Event.where(id: similar_events_ids).active.with_high_score.not_in_saved(user)
+    similar_events     = Event.where(id: similar_events_ids).active.not_in_saved(user)
     identifier         = local_assigns.fetch(:identifier, 'similar')
     json_request       = local_assigns.fetch(:json_request, false)
   end
