Search for name if user id not found

--- a/web/app/assets/stylesheets/components/me-feed.scss
+++ b/web/app/assets/stylesheets/components/me-feed.scss
@@ -118,6 +118,11 @@ $mdc-layout-grid-columns: (
         //display: none;
       }
     }
+
+    & a {
+      color: $brand-color;
+      text-decoration: underline;
+    }
   }
 
   &__load-more {
