--- a/web/app/assets/stylesheets/components/me-page.scss
+++ b/web/app/assets/stylesheets/components/me-page.scss
@@ -70,6 +70,7 @@
 
   &--profile__section {
     padding: 24px 0 0 0;
+    min-height: 45vh;
     @include is-open-up-animated;
     @include mdc-layout-grid-media-query_("phone") {
       padding: 24px 0 0 0;
