--- a/web/app/views/search/index.html.erb
+++ b/web/app/views/search/index.html.erb
@@ -21,7 +21,9 @@
     <%= render partial: "components/collection/collection", locals: @locals %>
   <% else %>
     <section class="me-feed__section" style="margin: 0 auto 25px auto;">
-      <h3>Nenhum evento encontrado</h3>
+      <div class="me-feed__section-head">
+        <h2>Nenhum evento encontrado. <%= link_to 'Veja todos os eventos', feed_path %>.</h2>
+      </div>
     </section>
   <% end %>
 </div>
