Update banner to request invite

--- a/web/app/assets/stylesheets/components/me-card.scss
+++ b/web/app/assets/stylesheets/components/me-card.scss
@@ -435,6 +435,13 @@ $description-color: $font-secondary-color;
       }
     }
 
+    & .me-card__address {
+      font-weight: normal;
+      &:hover {
+        color: $brand-color;
+      }
+    }
+
     & .me-card__date {
       margin: 0;
 
