--- a/web/app/views/layouts/_app-top-bar.html.erb
+++ b/web/app/views/layouts/_app-top-bar.html.erb
@@ -111,7 +111,7 @@
         </div>
       <% else %>
         <%= link_to root_path do %>
-          <button class="me-button mdc-button mdc-button--unelevated">Solicitar convite</button>
+          <button class="me-button mdc-button mdc-button--unelevated">Pegar convite</button>
         <% end %>
         <!--        <div class="me-top-app-bar__signin-link">-->
         <!--          <span onclick="CacheModule.clearCache(); location.assign('/users/auth/google_oauth2')">Entrar</span>-->
