--- a/web/app/views/events/show.amp.erb
+++ b/web/app/views/events/show.amp.erb
@@ -1,4 +1,4 @@
-<% content_for :meta_title, "Evento #{@event.details_name} em Porto Alegre" %>
+<% content_for :meta_title, "Evento #{@event.details_name.gsub(/[^[0-9][$][-]\p{L}\p{M}*+ ]|[+]/i, '')} em Porto Alegre" %>
 <% content_for :meta_description, strip_tags(limit_description_size(@event.details_description, 160)) %>
 <% content_for :meta_image, @event.image[:original].url %>
 
@@ -7,9 +7,9 @@
 {
   "@context": "https://schema.org",
   "@type": "Event",
-  "name": "<%= @event.details_name %>",
-  "startDate": "<%= @event.first_day_time.to_datetime.iso8601 %>",
-  "endDate": "",
+  "name": "<%= @event.details_name.gsub(/[^[0-9][$][-]\p{L}\p{M}*+ ]|[+]/i, '') %>",
+  "startDate": "<%= @event.ld_json.start_date %>",
+  "endDate": "<%= @event.ld_json.end_date %>",
   "image": [
     "<%= @event.image[:original].url %>"
    ],
@@ -24,19 +24,24 @@
       "addressLocality": "<%= @event.geographic['city'] %>",
       "postalCode": "<%= @event.geographic['cep'] %>",
       "addressRegion": "RS",
-      "addressCountry": "BR"
+      "addressCountry": {
+        "@type": "Country",
+        "name": "BR"
+       }
     },
     "url": "<%= place_path @event.place %>"
   },
   "offers": {
     "@type": "AggregateOffer",
-    "price": "<%= @event.details_prices.try(:min) %>",
-    "lowPrice": "<%= @event.details_prices.try(:min) %>",
+    "price": "<%= @event.ld_json.price %>",
+    "lowPrice": "<%= @event.ld_json.low_price %>",
+    "highPrice": "<%= @event.ld_json.high_price %>",
     "priceCurrency": "BRL",
-    "url": "<%= event_path @event %>"
+    "url": "<%= event_path @event %>",
+    "availability": "<%= @event.ld_json.availability %>",
+    "validFrom": "<%= @event.ld_json.valid_from %>"
   }
 }
-
 
 </script>
 
