--- a/web/app/views/welcome/index.html.erb
+++ b/web/app/views/welcome/index.html.erb
@@ -18,7 +18,7 @@
           </nav>
         </section>
 
-        <section class="headline">
+        <section class="headline is-initial-state">
           <h1>Te entregamos uma experiência única de Porto Alegre</h1>
           <h2>Aprendemos o que você gosta e não gosta para te sugerir eventos, atividades, promoções e serviços que vão de lazer a educação. Assim, você descobre coisas novas e não perde o que já conhece.</h2>
         </section>
