--- a/web/app/assets/stylesheets/_template.scss
+++ b/web/app/assets/stylesheets/_template.scss
@@ -46,8 +46,8 @@
 }
 
 .with-section-constraints {
-  max-width: 95%;
-  padding: 0 0 0 10%;
+  max-width: 80%;
+  padding: 0 10%;
 
   & .mdc-layout-grid {
     padding: 0;
