--- a/web/app/assets/stylesheets/components/me-button.scss
+++ b/web/app/assets/stylesheets/components/me-button.scss
@@ -4,5 +4,11 @@ $fill-color: #ffffff;
 
 .me-button {
   @include mdc-button-filled-accessible($brand-color);
+  font-family: $font-primary-family;
+  font-weight: 600;
+  text-transform: none;
+  letter-spacing: 0;
+  font-size: 18px;
+  line-height: 22px;
   border-radius: 36px;
 }
