--- a/web/app/views/feeds/_float_menu.html.erb
+++ b/web/app/views/feeds/_float_menu.html.erb
@@ -1,3 +1,7 @@
+<%
+  return unless params['controller'] == 'feeds' && params['action'] == 'index'
+%>
+
 <div data-controller="float-menu" data-target="float-menu.menu" class="me-float-menu">
   <div class="me-float-menu__nav">
 <!--    <div class="me-float-menu__item" data-action="click->float-menu#scrollTo" data-collection-identifier="saves">-->
