--- a/web/app/assets/stylesheets/components/me-button.scss
+++ b/web/app/assets/stylesheets/components/me-button.scss
@@ -11,4 +11,14 @@ $fill-color: #ffffff;
   font-size: 18px;
   line-height: 22px;
   border-radius: 36px;
+  padding: 12px 16px;
+  height: auto;
+  @include mdc-layout-grid-media-query_("phone") {
+    padding: 16px 18px;
+  }
+
+  & svg {
+    height: 18px;
+    margin: 0 10px 0 0;
+  }
 }
