--- a/web/app/assets/stylesheets/components/me-page.scss
+++ b/web/app/assets/stylesheets/components/me-page.scss
@@ -39,6 +39,16 @@
     }
   }
 
+  &--justify-center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 60vh;
+    @include mdc-layout-grid-media-query_("phone") {
+      padding: 0 24px;
+    }
+  }
+
   &--feed-section {
     //max-width: 85%;
     // padding-top: 35px;
@@ -76,6 +86,9 @@
       padding: 24px 0 0 0;
     }
 
+    & .mdc-layout-grid {
+      padding: 0;
+    }
 
     @include mdc-layout-grid-media-query_("phone") {
       & .mdc-layout-grid {
