--- a/web/app/views/feeds/category.html.erb
+++ b/web/app/views/feeds/category.html.erb
@@ -1,33 +1,35 @@
-<% content_for :canonical_url, category_events_url %>
-<% content_for :amp_url, category_events_url(format: :amp) %>
+<section class="me-page me-page--profile__section is-animated">
+  <% content_for :canonical_url, category_events_url %>
+  <% content_for :amp_url, category_events_url(format: :amp) %>
 
-<%= notice %>
+  <%= notice %>
 
-<% content_for :meta_title, "Eventos de #{params[:category].capitalize} em Porto Alegre - RS" %>
-<% content_for :meta_description, "Descubra eventos de #{params[:category]} que acontecem hoje e outros dias do mês em Porto Alegre - RS" %>
+  <% content_for :meta_title, "Eventos de #{params[:category].capitalize} em Porto Alegre - RS" %>
+  <% content_for :meta_description, "Descubra eventos de #{params[:category]} que acontecem hoje e outros dias do mês em Porto Alegre - RS" %>
 
-<script type="application/ld+json">
+  <script type="application/ld+json">
   [<%= render partial: 'layouts/json_ld', collection: @collection[:events], as: :event %>]
 
-</script>
 
-<section class="me-feed__section" style="margin: 0 auto 25px auto;">
-  <div class="me-chip-set__wrapper">
-    <div class="me-chip-set me-chip-set--categories mdc-chip-set mdc-chip-set--choice">
-      <% @categories.delete_if{|category| ['anúncio', 'outlier'].include? category}.each do |category| %>
-        <a href="<%= category_events_path category %>" class="me-chip mdc-chip <%= 'mdc-chip--selected' if category == params[:category] %>">
-          <span class="mdc-chip__text"><%= category %></span>
-        </a>
-      <% end %>
+  </script>
+
+  <section class="me-feed__section" style="margin: 0 auto 25px auto;">
+    <div class="me-chip-set__wrapper">
+      <div class="me-chip-set me-chip-set--categories mdc-chip-set mdc-chip-set--choice">
+        <% @categories.delete_if { |category| ['anúncio', 'outlier'].include? category }.each do |category| %>
+          <a href="<%= category_events_path category %>" class="me-chip mdc-chip <%= 'mdc-chip--selected' if category == params[:category] %>">
+            <span class="mdc-chip__text"><%= category %></span>
+          </a>
+        <% end %>
+      </div>
     </div>
-  </div>
-</section>
+  </section>
 
+  <%= render partial: "components/collection/collection", locals: @locals %>
 
-<%= render partial: "components/collection/collection", locals: @locals %>
-
-<% unless current_user %>
-  <%= link_to root_path, style: "display: flex" do %>
-    <img class="me-banner" data-gtm="banner-request-invite-footer" loading="lazy" src="<%= image_url 'banners/get-invite-banner' %>" alt="Pegue um convite">
+  <% unless current_user %>
+    <%= link_to root_path, style: "display: flex" do %>
+      <img class="me-banner" data-gtm="banner-request-invite-footer" loading="lazy" src="<%= image_url 'banners/get-invite-banner' %>" alt="Pegue um convite">
+    <% end %>
   <% end %>
-<% end %>
+</section>
