--- a/web/app/views/feeds/index.html.erb
+++ b/web/app/views/feeds/index.html.erb
@@ -1,125 +1,127 @@
-<%= render partial: 'components/swipable/swipable' unless current_user&.personas_assortment_finished? %>
+<section class="me-page me-page--feed-section is-animated">
+  <%= render partial: 'components/swipable/swipable' unless current_user&.personas_assortment_finished? %>
 
-<%= render partial: 'saves',
-           locals:  {
-               identifier:   'salvos',
-               saved_events: @favorited_events
-           } if current_user && current_user&.personas_assortment_finished? %>
+  <%= render partial: 'saves',
+             locals:  {
+                 identifier:   'salvos',
+                 saved_events: @favorited_events
+             } if current_user && current_user&.personas_assortment_finished? %>
 
 
-<div class="me-feed me-page__section">
+  <div class="me-feed me-page__section">
 
-  <% if current_user&.personas_assortment_finished? %>
-    <% if @items.dig(:week, :detail, :total_events_in_collection).try { |counter| counter > 0 } %>
-      <%= render partial: "components/collection/collection",
-                 locals:  {
-                     items:      @items[:week],
-                     title:      {
-                         principal: "Eventos acontecendo esta semana",
-                         secondary: "Hoje (#{I18n.l(Date.today, format: :short)}) até #{I18n.l(Date.today + 6, format: :week)} (#{I18n.l(Date.today + 6, format: :short)})"
-                     },
-                     identifier: 'this-week',
-                     opts:       {
-                         type:    :large,
-                         filters: {
-                             categories: true,
-                             kinds:      true,
-                             ocurrences: true
-                         },
-                         detail:  @items[:week][:detail],
-                         origin:  :feed
-                     }
-                 } %>
+    <% if current_user&.personas_assortment_finished? %>
+      <% if @items.dig(:week, :detail, :total_events_in_collection).try { |counter| counter > 0 } %>
+        <%= render partial: "components/collection/collection",
+                   locals:  {
+                       items:      @items[:week],
+                       title:      {
+                           principal: "Eventos acontecendo esta semana",
+                           secondary: "Hoje (#{I18n.l(Date.today, format: :short)}) até #{I18n.l(Date.today + 6, format: :week)} (#{I18n.l(Date.today + 6, format: :short)})"
+                       },
+                       identifier: 'this-week',
+                       opts:       {
+                           type:    :large,
+                           filters: {
+                               categories: true,
+                               kinds:      true,
+                               ocurrences: true
+                           },
+                           detail:  @items[:week][:detail],
+                           origin:  :feed
+                       }
+                   } %>
+      <% end %>
+      <% if current_user && @items.dig(:follow, :detail, :total_events_in_collection).try { |counter| counter > 0 } %>
+        <%= render partial: "components/collection/collection",
+                   locals:  {
+                       items:      @items[:follow],
+                       title:      {
+                           principal: "Tópicos que você segue",
+                           secondary: "Explore os eventos de organizadores, locais e tags que você segue como #{current_user.following_topics(only: :name, as: :list, size: 3)}".html_safe
+                       },
+                       identifier: 'follow',
+                       opts:       {
+                           type:    :large,
+                           filters: {
+                               categories: true,
+                               kinds:      true,
+                               ocurrences: true
+                           },
+                           detail:  @items[:follow][:detail],
+                           origin:  :feed
+                       }
+                   } %>
+      <% end %>
+
+
+      <% if current_user && @items.dig(:user_suggestions, :detail, :total_events_in_collection).try { |counter| counter > 0 } %>
+        <%= render partial: "components/collection/collection",
+                   locals:  {
+                       items:      @items[:user_suggestions],
+                       title:      {
+                           principal: "Indicados para #{current_user.name}",
+                           secondary: "Explore os eventos que indicamos com base no seu gosto pessoal"
+                       },
+                       identifier: 'user-suggestions',
+                       opts:       {
+                           type:    :large,
+                           filters: {
+                               categories: true,
+                               kinds:      false,
+                               ocurrences: true
+                           },
+                           detail:  @items[:user_suggestions][:detail],
+                           origin:  :feed
+                       }
+                   } %>
+
+      <% end %>
+
+
+      <% if @items.dig(:user_personas, :detail, :total_events_in_collection).try { |counter| counter > 0 } %>
+        <%= render partial: "components/collection/collection",
+                   locals:  {
+                       items:      @items[:user_personas],
+                       title:      {
+                           principal: "Gostos parecidos",
+                           secondary: "Explore os eventos que pessoas com gostos parecidos estão salvando"
+                       },
+                       identifier: 'user-personas',
+                       opts:       {
+                           type:    :large,
+                           filters: {
+                               categories: true,
+                               kinds:      false,
+                               ocurrences: true
+                           },
+                           detail:  @items[:user_personas][:detail],
+                           origin:  :feed
+                       }
+                   } %>
+      <% end %>
+
+      <% if @items.dig(:explorer, :detail, :total_events_in_collection).try { |counter| counter > 0 } %>
+        <%= render partial: "components/collection/collection",
+                   locals:  {
+                       items:      @items[:explorer],
+                       title:      {
+                           principal: "Explorar todos os eventos",
+                           secondary: "Use os filtros abaixo e seja feliz :)"
+                       },
+                       identifier: 'explorer',
+                       opts:       {
+                           type:    :large,
+                           filters: {
+                               categories: true,
+                               kinds:      false,
+                               ocurrences: true
+                           },
+                           detail:  @items[:explorer][:detail],
+                           origin:  :feed
+                       }
+                   } %>
+      <% end %>
     <% end %>
-    <% if current_user && @items.dig(:follow, :detail, :total_events_in_collection).try { |counter| counter > 0 } %>
-      <%= render partial: "components/collection/collection",
-                 locals:  {
-                     items:      @items[:follow],
-                     title:      {
-                         principal: "Tópicos que você segue",
-                         secondary: "Explore os eventos de organizadores, locais e tags que você segue como #{current_user.following_topics(only: :name, as: :list, size: 3)}".html_safe
-                     },
-                     identifier: 'follow',
-                     opts:       {
-                         type:    :large,
-                         filters: {
-                             categories: true,
-                             kinds:      true,
-                             ocurrences: true
-                         },
-                         detail:  @items[:follow][:detail],
-                         origin:  :feed
-                     }
-                 } %>
-    <% end %>
-
-
-    <% if current_user && @items.dig(:user_suggestions, :detail, :total_events_in_collection).try { |counter| counter > 0 } %>
-      <%= render partial: "components/collection/collection",
-                 locals:  {
-                     items:      @items[:user_suggestions],
-                     title:      {
-                         principal: "Indicados para #{current_user.name}",
-                         secondary: "Explore os eventos que indicamos com base no seu gosto pessoal"
-                     },
-                     identifier: 'user-suggestions',
-                     opts:       {
-                         type:    :large,
-                         filters: {
-                             categories: true,
-                             kinds:      false,
-                             ocurrences: true
-                         },
-                         detail:  @items[:user_suggestions][:detail],
-                         origin:  :feed
-                     }
-                 } %>
-
-    <% end %>
-
-
-    <% if @items.dig(:user_personas, :detail, :total_events_in_collection).try { |counter| counter > 0 } %>
-      <%= render partial: "components/collection/collection",
-                 locals:  {
-                     items:      @items[:user_personas],
-                     title:      {
-                         principal: "Gostos parecidos",
-                         secondary: "Explore os eventos que pessoas com gostos parecidos estão salvando"
-                     },
-                     identifier: 'user-personas',
-                     opts:       {
-                         type:    :large,
-                         filters: {
-                             categories: true,
-                             kinds:      false,
-                             ocurrences: true
-                         },
-                         detail:  @items[:user_personas][:detail],
-                         origin:  :feed
-                     }
-                 } %>
-    <% end %>
-
-    <% if @items.dig(:explorer, :detail, :total_events_in_collection).try { |counter| counter > 0 } %>
-      <%= render partial: "components/collection/collection",
-                 locals:  {
-                     items:      @items[:explorer],
-                     title:      {
-                         principal: "Explorar todos os eventos",
-                         secondary: "Use os filtros abaixo e seja feliz :)"
-                     },
-                     identifier: 'explorer',
-                     opts:       {
-                         type:    :large,
-                         filters: {
-                             categories: true,
-                             kinds:      false,
-                             ocurrences: true
-                         },
-                         detail:  @items[:explorer][:detail],
-                         origin:  :feed
-                     }
-                 } %>
-    <% end %>
-  <% end %>
-</div>
+  </div>
+</section>
