--- a/web/app/views/places/show.html.erb
+++ b/web/app/views/places/show.html.erb
@@ -1,12 +1,15 @@
-<% content_for :canonical_url, place_url(@place, format: :html) %>
+<section class="me-page me-page--profile__section is-animated">
+  <% content_for :canonical_url, place_url(@place, format: :html) %>
 
-<%= notice %>
+  <%= notice %>
 
-<% content_for :meta_title, "Eventos em #{@place.details_name} Porto Alegre | Alegreme.com" %>
+  <% content_for :meta_title, "Eventos em #{@place.details_name} Porto Alegre | Alegreme.com" %>
 
-<script type="application/ld+json">
+  <script type="application/ld+json">
   [
     <%= render partial: 'layouts/json_ld', collection: @collection[:events], as: :event %>
   ]
 </script>
-<%= render partial: "components/collection/collection", locals: @locals %>
+  <%= render partial: "components/collection/collection", locals: @locals %>
+</section>
+
