--- a/web/app/views/users/edit.html.erb
+++ b/web/app/views/users/edit.html.erb
@@ -1,6 +1,9 @@
-<h1>Editing User</h1>
+<section class="with-section-constraints">
+  <h1>Editing User</h1>
 
-<%= render 'form', user: @user %>
+  <%= render 'form', user: @user %>
 
-<%= link_to 'Show', @user %> |
-<%= link_to 'Back', users_path %>
+  <%= link_to 'Show', @user %> |
+  <%= link_to 'Back', users_path %>
+</section>
+
