--- a/web/app/assets/stylesheets/welcome/application.scss
+++ b/web/app/assets/stylesheets/welcome/application.scss
@@ -2,7 +2,7 @@
 @import "media-queries";
 @import "variables";
 @import "@material/snackbar/mdc-snackbar";
-@import "pwa-install-prompt/style";
+// @import "pwa-install-prompt/style";
 //@import "smile";
 //@import "@material/fab/mdc-fab";
 
