--- a/web/app/views/layouts/_app-top-bar.html.erb
+++ b/web/app/views/layouts/_app-top-bar.html.erb
@@ -104,7 +104,9 @@
     <section
       class="me-top-app-bar__section me-top-app-bar__section--right mdc-top-app-bar__section mdc-top-app-bar__section--align-end">
       <% if current_user %>
-        <img class="me-top-app-bar__picture" src="<%= current_user.picture %>" alt="<%= current_user.name %>">
+        <% if current_user.picture %>
+          <img class="me-top-app-bar__picture" src="<%= current_user.picture %>" alt="<%= current_user.name %>">
+        <% end %>
         <div style="flex-direction: row">
           <%= link_to current_user.name, edit_user_path(current_user), class: "me-top-app-bar__name" %> <br>
           <%= link_to "Sair", destroy_user_session_path, method: :delete, class: "me-top-app-bar__logout" %>
